// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return create an job 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
        "app.gitlab.com/env.name": "fabrique-dev",
      },
      "labels": Object {
        "application": "my-test-sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "azure-pg-user-abcdefg",
      "namespace": "sample-42-my-test",
    },
    "stringData": Object {
      "DATABASE_URL": "postgresql://user_abcdefg%40sampledevserver.postgres.database.azure.com:password_abcdefg@sampledevserver.postgres.database.azure.com/autodevops_abcdefg?sslmode=require",
      "DB_URI": "postgresql://user_abcdefg%40sampledevserver.postgres.database.azure.com:password_abcdefg@sampledevserver.postgres.database.azure.com/autodevops_abcdefg?sslmode=require",
      "HASURA_GRAPHQL_DATABASE_URL": "postgresql://user_abcdefg%40sampledevserver.postgres.database.azure.com:password_abcdefg@sampledevserver.postgres.database.azure.com/autodevops_abcdefg?sslmode=require",
      "PGDATABASE": "autodevops_abcdefg",
      "PGHOST": "sampledevserver.postgres.database.azure.com",
      "PGPASSWORD": "password_abcdefg",
      "PGRST_DB_URI": "postgresql://user_abcdefg%40sampledevserver.postgres.database.azure.com:password_abcdefg@sampledevserver.postgres.database.azure.com/autodevops_abcdefg?sslmode=require",
      "PGSSLMODE": "require",
      "PGUSER": "user_abcdefg@sampledevserver.postgres.database.azure.com",
    },
  },
]
`;

exports[`should throw because of a missing envs 1`] = `"Missing process.env.CI_COMMIT_SHORT_SHA"`;

exports[`should use custom pgHost 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
        "app.gitlab.com/env.name": "fabrique-dev",
      },
      "labels": Object {
        "application": "my-test-sample-next-app",
        "owner": "sample-next-app",
        "team": "sample-next-app",
      },
      "name": "azure-pg-user-abcdefg",
      "namespace": "sample-42-my-test",
    },
    "stringData": Object {
      "DATABASE_URL": "postgresql://user_abcdefg%40pouetpouet.com:password_abcdefg@pouetpouet.com/autodevops_abcdefg?sslmode=require",
      "DB_URI": "postgresql://user_abcdefg%40pouetpouet.com:password_abcdefg@pouetpouet.com/autodevops_abcdefg?sslmode=require",
      "HASURA_GRAPHQL_DATABASE_URL": "postgresql://user_abcdefg%40pouetpouet.com:password_abcdefg@pouetpouet.com/autodevops_abcdefg?sslmode=require",
      "PGDATABASE": "autodevops_abcdefg",
      "PGHOST": "pouetpouet.com",
      "PGPASSWORD": "password_abcdefg",
      "PGRST_DB_URI": "postgresql://user_abcdefg%40pouetpouet.com:password_abcdefg@pouetpouet.com/autodevops_abcdefg?sslmode=require",
      "PGSSLMODE": "require",
      "PGUSER": "user_abcdefg@pouetpouet.com",
    },
  },
]
`;
